# prowler-aws-only

./: README.md  pyproject.toml  requirements.txt
dashboard/: __init__.py  __main__.py
dashboard/lib/arguments/: arguments.py
prowler/: __main__.py
prowler/lib/cli/: parser.py
prowler/lib/outputs/: finding.py  summary_table.py
prowler/providers/: common_models.py
prowler/providers/alibabacloud/: __init__.py  models.py
prowler/providers/azure/: __init__.py  models.py
prowler/providers/github/: __init__.py  models.py
prowler/providers/kubernetes/: __init__.py
