[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0"]

[project]
authors = [{name = "Prowler Team"}, {name = "EY Cloud Security Team"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "boto3>=1.35.0",
  "botocore>=1.35.0",
  "colorama>=0.4.0",
  "pydantic>=2.0",
  "python-dateutil>=2.9.0",
  "pytz>=2024.0",
  "tabulate>=0.9.0",
  "tzlocal>=5.0",
  "pyyaml>=6.0",
  "markdown>=3.0",
  "schema>=0.7.0",
  "alive-progress>=3.3.0",
  "detect-secrets>=1.5.0",
  "packaging>=24.0",
]
description = "AWS-only security auditing tool (stripped from Prowler)"
license = "Apache-2.0"
name = "prowler-aws"
readme = "README.md"
requires-python = ">=3.10,<3.13"
version = "5.0.0"

[project.scripts]
prowler-aws = "prowler.__main__:prowler"

[tool.poetry]
packages = [{include = "prowler"}]
requires-poetry = ">=2.0"